# gitea-admin

./: .gitignore  .pre-commit-config.yaml  README.md  gitea_delete_org.py  gitea_import.py  gitlab_gitea_migrate.py  pylock.toml  pyproject.toml  repos.txt  requirements.txt
