[project]
name = "gitea-admin"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pycurl>=7.45.6",
    "python-dotenv>=1.1.1",
    "python-gitlab>=6.1.0",
]

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 80

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
